refactor: 람다와 제공 메서드를 활용한 코드 구조 개선